new AddFollows controller test
